<resources>
    <string name="app_name">Nolan GafaX</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="username">username</string>
    <string name="log_in">LOG IN</string>
    <string name="password">password</string>
    <string name="todo">TODO</string>
    <string name="filter">FILTER</string>
    <string name="search">SEARCH</string>
    <string name="sales">Sales</string>
    <string name="total">Total</string>
    <string name="date">Date</string>
    <string name="partner">Partner</string>
    <string name="name">Name</string>
    <string name="quantity">Qty</string>
</resources>