<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonolan"
    tools:context=".activities.Inventario">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="178dp"
        android:layout_height="25dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="INVENTARIO"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn1"
        android:layout_width="134dp"
        android:layout_height="121dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="160dp"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="nextScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/btn4"
        android:layout_width="140dp"
        android:layout_height="131dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="nextScreen"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/btn3"
        android:layout_width="131dp"
        android:layout_height="129dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="44dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:onClick="nextScreen"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/btn2"
        android:layout_width="137dp"
        android:layout_height="125dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:onClick="nextScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/back"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="4dp"
        android:onClick="btnChange"
        android:text="@string/previous"
        app:layout_constraintBottom_toTopOf="@+id/npg"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/npg"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="167dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_width="122dp"
        android:layout_height="57dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="4dp"
        android:onClick="btnChange"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/npg"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/filter"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="92dp"
        android:background="@color/black"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="add"
        android:dropDownSelector="@color/black"
        android:entries="@array/filterOptions"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none"
        android:spinnerMode="dropdown"
        android:text="@string/filter"
        android:textAlignment="center"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="52dp"
        android:onClick="filterGafas"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCompra"
        android:layout_width="65dp"
        android:layout_height="44dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:onClick="btnBuy"
        android:text="BUY"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>



