<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonolan"
    tools:context=".activities.Orders">

    <TextView
        android:id="@+id/SaleName"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="500dp"
        app:layout_constraintHeight_min="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaleName">

        <HorizontalScrollView
            android:id="@+id/scrollhorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableOrders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:backgroundTint="@color/black">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="60dp"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textAlignment="center"
                            android:textColor="@color/blanco" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/quantity"
                            android:textAlignment="center"
                            android:textColor="@color/blanco" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/total"
                            android:textAlignment="center"
                            android:textColor="@color/blanco" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="Erase"
                            android:textAlignment="center"
                            android:textColor="@color/blanco" />

                    </TableRow>

                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>