<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonolan"
    tools:context=".MainActivity3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logintabla"
        android:layout_width="282dp"
        android:layout_height="403dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/logintabla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/textfield"
            android:hint="@string/username"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/textfield"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <ImageButton
            android:id="@+id/login_bt"
            android:layout_width="93dp"
            android:layout_height="54dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="98dp"
            android:background="@drawable/loginbutton"
            android:backgroundTint="#00FFFFFF"
            android:backgroundTintMode="add"
            android:contentDescription="TODO"
            android:onClick="nextScreen"
            android:text="@string/log_in"
            android:textColor="#000000"
            app:icon="@android:color/background_light"
            app:iconTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#FFFFFF"
            app:strokeWidth="8dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="26dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>